--- a/FriendsMess/Views/Extra/OtherExpense.cshtml
+++ b/FriendsMess/Views/Extra/OtherExpense.cshtml
@@ -3,23 +3,23 @@
     ViewBag.Title = "Others";
 }
 
-<h2>@ViewBag.status</h2>
+<h2 style="text-align: center">@ViewBag.status</h2>
 <div>
     @using (Html.BeginForm("Save", "Extra"))
     {
         <div class="form-group">
             @Html.LabelFor(m => m.Name)
-            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control md-textbox", placeholder="Enter expense name" })
             @Html.ValidationMessageFor(m => m.Name)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Amount)
-            @Html.TextBoxFor(m => m.Amount, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Amount, new { @class = "form-control md-textbox" })
             @Html.ValidationMessageFor(m => m.Amount)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Description)
-            @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+            @Html.TextAreaFor(m => m.Description, new { @class = "form-control md-textbox" ,placeholder="Briefly describe the expense here"})
             @Html.ValidationMessageFor(m => m.Description)
         </div>
         @Html.HiddenFor(m=>m.Id)
