--- a/FriendsMess/Views/Shared/_Layout.cshtml
+++ b/FriendsMess/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Friends Mess", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Friends Mess", "Notice", "Extra", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
