--- a/FriendsMess/Views/Shared/_ViewOnly.cshtml
+++ b/FriendsMess/Views/Shared/_ViewOnly.cshtml
@@ -9,8 +9,8 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body style="background-color:cornflowerblue">
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:lightblue;">
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,15 +18,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Friends Mess", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Friends Mess", "Notice", "ViewOnly", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" >
                     <li>@Html.ActionLink("Home", "ViewHome", "ViewOnly")</li>
                     <li>@Html.ActionLink("Members", "Members", "ViewOnly")</li>
                     <li>@Html.ActionLink("Expenses", "Expense", "ViewOnly")</li>
+                    <li>@Html.ActionLink("Assigned Dates", "ShowDates", "ViewOnly")</li>
                     <li>@Html.ActionLink("Others", "Others", "ViewOnly")</li>
-                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("Contact", "Contact", "ViewOnly")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
