--- a/FriendsMess/Views/ViewOnly/Expense.cshtml
+++ b/FriendsMess/Views/ViewOnly/Expense.cshtml
@@ -7,76 +7,77 @@
 <h2 style="text-align: center; color: white;">Daily Expenses</h2>
 @if (Model.Count > 0)
 {
-    <table id="expenseTbl" class="table table-bordered table-hover">
+    <table class="table table-hover" id="expenseTbl">
         <thead>
-            <tr class="danger">
-                <th>Day</th>
-                <th>Expense</th>
-                <th>Total Meals</th>
-                <th>Daily Meal Rate</th>
-                <th>Responsible Member</th>
-            </tr>
+        <tr style="background-color: #696969;color: #b0e0e6">
+            <th>Date</th>
+            <th>Expense</th>
+            <th>Total Meals</th>
+            <th>Daily Meal Rate</th>
+            <th>Responsible Member</th>
+        </tr>
         </thead>
         <tbody>
-            @{
-    var totalExpense = 0;
-    var totalMeal = 0;
-            }
-            @foreach (var day in Model)
-            {
-                <tr style="background-color:gainsboro">
-                    <td>@day.DayNumber</td>
-                    <td>
-                        @{
-                var expense = (int)day.Expense;
-                        }
-                        @expense.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))
-                    <td>@day.TotalMeal</td>
-                    @{
+        @{
+            var totalExpense = 0;
+            var totalMeal = 0;
+        }
+        @foreach (var day in Model)
+        {
+            <tr>
+                <td>@day.DayNumber.ToShortDateString()</td>
+                <td>
+                @{
+                    var expense = (int)day.Expense;
+                }
+                @expense.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))
+                <td><span class="glyphicon glyphicon-cutlery"></span> @day.TotalMeal</td>
+                @{
 
-                float mealRate;
+                    float mealRate;
+                    try
+                    {
+                        totalExpense += (int)day.Expense;
+                        totalMeal += (int)day.TotalMeal;
+                        mealRate = (float)day.Expense / (float)day.TotalMeal;
+                    }
+                    catch (Exception e)
+                    {
+                        mealRate = 0;
+                    }
+
+                }
+                <td>@mealRate.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                <td>@day.ResponsibleMember</td>
+            </tr>
+        }
+        <tr>
+            @{
+                float averageMealRate;
                 try
                 {
-                    totalExpense += (int)day.Expense;
-                    totalMeal += (int)day.TotalMeal;
-                    mealRate = (float)day.Expense / (float)day.TotalMeal;
+                    averageMealRate = (float)totalExpense / (float)totalMeal;
                 }
                 catch (Exception e)
                 {
-                    mealRate = 0;
+                    averageMealRate = 0;
                 }
 
-                    }
-                    <td>@mealRate.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
-                    <td>@day.ResponsibleMember</td>
-                </tr>
             }
-            <tr style="background-color:greenyellow">
-                @{
-            float averageMealRate;
-            try
-            {
-                averageMealRate = (float)totalExpense / (float)totalMeal;
-            }
-            catch (Exception e)
-            {
-                averageMealRate = 0;
-            }
+            <td style="text-align: right">Total:</td>
+            <td style="font-weight: bold">@totalExpense.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+            <td style="font-weight: bold"><span class="glyphicon glyphicon-cutlery"></span> @totalMeal</td>
+            <td style="text-align: right">Average Meal Rate:</td>
+            <td style="font-weight: bold">@averageMealRate.ToString("C4", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+        </tr>
 
-                }
-                <td style="text-align: right">Total:</td>
-                <td style="font-weight: bold">@totalExpense.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
-                <td style="font-weight: bold">@totalMeal</td>
-                <td style="text-align: right">Average Meal Rate:</td>
-                <td style="font-weight: bold">@averageMealRate.ToString("C4", CultureInfo.CreateSpecificCulture("en-BD"))</td>
-            </tr>
         </tbody>
     </table>
 }
 else
 {
-    <div style="margin-top: 10%;" class="jumbotron">
-        <h3 style="color:red;">No expenses to show !</h3>
+    <div style="margin-top: 7%;background: brown" class="jumbotron">
+        <h3>No expenses yet !</h3>
 
     </div>
 }
