--- a/FriendsMess/Views/ViewOnly/Index.cshtml
+++ b/FriendsMess/Views/ViewOnly/Index.cshtml
@@ -13,7 +13,7 @@
     <title>Index</title>
 </head>
 <body>
-<h2 style="color: aqua;text-align: center">Welcome to Friends Mess</h2>
+<h2 style="text-align: center">Welcome to Friends Mess</h2>
     
 <div style="margin-left: 30%; padding: 5%;">
     @using (Html.BeginForm("Home","ViewOnly"))
@@ -23,7 +23,7 @@
             @Html.TextBoxFor(m => m.UserName, new {@class = "form-control"})
         </div>
         <div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Enter</button>
         </div>
     }
 
