--- a/FriendsMess/Views/ViewOnly/ViewMeal.cshtml
+++ b/FriendsMess/Views/ViewOnly/ViewMeal.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_ViewOnly.cshtml";
     var totalMeal = 0;
 }
-<h2 style="text-align: center;color: brown">Meals of @ViewBag.member</h2>
+<h2 style="text-align: center; margin-top: 10px;">Meals of @ViewBag.member</h2>
 @if (Model.Count > 0)
 {
     <div>
-        <table class="table table-hover table-bordered">
+        <table id="DetailedMeal" class="table table-hover">
             <thead>
-            <tr class="danger">
+            <tr style="background-color: #2f4f4f;color: burlywood">
                 <th>Day</th>
                 <th>Meal number</th>
             </tr>
@@ -26,15 +26,15 @@
                 {
                     Console.WriteLine("There was some problem while converting meals into integer!");
                 }
-                <tr style="background-color:gainsboro">
-                    <td>@day.DayNoId</td>
-                    <td>@day.MealNo</td>
+                <tr>
+                    <td>@day.DayNoId.ToLongDateString()</td>
+                    <td><span class="glyphicon glyphicon-cutlery"></span> @day.MealNo </td>
                 </tr>
             }
-                <tr style="background-color:greenyellow">
-                    <td style="text-align: right">Total:</td>
-                    <td style="font-weight: bold">@totalMeal</td>
-                </tr>
+            <tr>
+                <td style="text-align: right">Total:</td>
+                <td style="font-weight: bold"><span class="glyphicon glyphicon-cutlery"></span> @totalMeal</td>
+            </tr>
             </tbody>
         </table>
     </div>
@@ -42,8 +42,8 @@
 }
 else
 {
-    <div style="margin-top: 10%;" class=" jumbotron">
-        <h3 style="color:red;">No meals yet !</h3>
+    <div style="margin-top: 7%;background: brown" class="jumbotron">
+    <h3>No Meals yet !</h3>
     </div>
 }
 
